Tests started; updated the folder names

--- a/Captain.Main/Captain.Main.csproj
+++ b/Captain.Main/Captain.Main.csproj
@@ -11,8 +11,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Captain.Core\Captain.Core.csproj" />
-    <ProjectReference Include="..\Captain.TwoMachineOptimistic\Captain.Optimistic.csproj" />
-    <ProjectReference Include="..\Captain.TwoMachinePessimistic\Captain.Pessimistic.csproj" />
+    <ProjectReference Include="..\Captain.Optimistic\Captain.Optimistic.csproj" />
+    <ProjectReference Include="..\Captain.Pessimistic\Captain.Pessimistic.csproj" />
   </ItemGroup>
 
   <ItemGroup>
