--- a/Captain.Quorum/Captain.Quorum.csproj
+++ b/Captain.Quorum/Captain.Quorum.csproj
@@ -8,7 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Captain.Core\Captain.Core.csproj" />
-    <ProjectReference Include="..\Captain.Optimistic\Captain.Optimistic.csproj" />
+    <ProjectReference Include="..\Captain.Pessimistic\Captain.Pessimistic.csproj" />
   </ItemGroup>
 
 </Project>
